--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Chrome Extension App</title>
+  <title>Chrome Web Extension Adapter</title>
 </head>
 <body>
-  <div id="o-app-root"></div>
+  <div id="root"></div>
 </body>
 </html>
